[gd_scene load_steps=10 format=3 uid="uid://df7ptdnqe5sew"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_74ab3"]
[ext_resource type="Texture2D" uid="uid://cx013lfmrlurw" path="res://Assets/Sprites/Player/Player.png" id="1_xygqi"]
[ext_resource type="PackedScene" uid="uid://d4b3k5fbeh3uf" path="res://Player/player_gun.tscn" id="3_vvun3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fl46c"]
size = Vector2(8, 14)

[sub_resource type="Animation" id="Animation_tr37o"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 3, 3]
}

[sub_resource type="Animation" id="Animation_kje21"]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_d073l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_6y4is"]
resource_name = "Run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"creat_dust_effect"
}, {
"args": [],
"method": &"creat_dust_effect"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jp1y"]
_data = {
"Idle": SubResource("Animation_tr37o"),
"Jump": SubResource("Animation_kje21"),
"RESET": SubResource("Animation_d073l"),
"Run": SubResource("Animation_6y4is")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_74ab3")
metadata/_edit_group_ = true

[node name="Player" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_xygqi")
hframes = 12

[node name="PlayerGun" parent="Player" instance=ExtResource("3_vvun3")]
show_behind_parent = true
position = Vector2(1, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_fl46c")

[node name="Sprite_Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4jp1y")
}

[node name="Camera_Follow" type="RemoteTransform2D" parent="."]
position = Vector2(0, -8)
update_rotation = false
update_scale = false

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
